--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <head>
       <title>MY PORTFOLIO</title>
+      <link rel="stylesheet" type="text/css" href="css/main.css">
    </head>
 
     
