--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <head>
       <title>MY PORTFOLIO</title>
-      <link rel="stylesheet" type="text/css" href="styles.css">
+      <link rel="stylesheet"  href="styles.css">
    </head>
 
     
