--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
    </head>
     
  <body  vlink="#f2f2f2">
+     <div class="text">
     <h1>Specs</h1>
             <p>Requested Entity Too Large</p>
             <p></p>
+     </div>
 
     
    
