--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <p></p>
    <div class="text">
     <h1>Skills :</h1>
-       </DIV>
    <img src="skills.png">
+            </div>
    <div class="text">
     <h1>My Aim :</h1>
        </DIV>
