--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p></p>
    <div class="text">
     <h1>Skills :</h1>
-   <img src="skills.png">
+   <img src="skills.jpg">
             </div>
    <div class="text">
     <h1>My Aim :</h1>
