--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p></p>
    <div class="text">
     <h1>Skills :</h1>
-   <img src="skills.jpg">
+   <img src="https://github.com/NT3002/manan/blob/main/skills.jpg?raw=true">
             </div>
    <div class="text">
     <h1>My Aim :</h1>
