--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
     <head>
-      <title>MY PORTFOLIO</title>
+      <title>TIWARI</title>
       <link rel="stylesheet"  href="styles.css">
    </head>
     
