--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <body  vlink="#f2f2f2">
    
    <p class="head">Welcome To My Portfolio</p>
+    <p> <p/>
      <div class="text">
     <h1>About Me :</h1>
        </DIV>
@@ -28,7 +29,7 @@
    <P class="temp">1. To Develop A Language That Can Be Used Universally</P>
    <P class="temp">2. To Represent India At ICPC </P>
    <div class="text">
-    <h1>My Academics :</h1>
+    <h1>Academics :</h1>
        </DIV>
    <P></P>
    <P class="temp">1. Jc.Bose University ,YMCA ,Faridabad (21-)</P>
@@ -39,7 +40,7 @@
   
    
    
-        <p class="text"> My Profiles :-</p>
+        <p class="text">Profiles :-</p>
 
         <P class="link"><a href="https://www.hackerrank.com/nikhiltiwari1903">HackerRank</a>.    .<a href="https://www.linkedin.com/in/tiwari-2">Linkedin</a>.    .<a href="https://www.instagram.com/codeforyourself_/">Instagram</a>.    .<a href="https://github.com/NT3002">Git Hub</a></p>
           
