--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <html>
 
     <head>
-      <title>TIWARI</title>
+      <title>NIKHIL TIWARI</title>
       <link rel="stylesheet"  href="styles.css">
    </head>
     
  <body  vlink="#f2f2f2">
    
-   <p class="head">Welcome To My Portfolio</p>
+   <p class="head"><b>Welcome To My Portfolio</b></p>
     <p> <p/>
      <div class="text">
     <h1>About Me :</h1>
@@ -27,7 +27,7 @@
        </DIV>
    <P></P>
    <P class="temp">1. To Develop A Language That Can Be Used Universally</P>
-   <P class="temp">2. To Represent India At ICPC </P>
+   <P class="temp">2. To Represent India At I.C.P.C </P>
    <div class="text">
     <h1>Academics :</h1>
        </DIV>
