--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <div class="text">
 	<hr/>
     <h1>Skills :</h1>
-   <img src="https://github.com/NT3002/manan/blob/main/skills.jpg?raw=true">
+   <img src="https://github.com/NT3002/manan/blob/main/skills.jpg?raw=true" border="2px">
             </div>
    <div class="text">
 	<hr/>
