--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    <hr/>
         <p class="text">Profiles :-</p>
 
-        <P class="link"><a href="https://www.hackerrank.com/nikhiltiwari1903">HackerRank</a>.    .<a href="https://www.linkedin.com/in/tiwari-2">Linkedin</a>.    .<a href="https://www.instagram.com/codeforyourself_/">Instagram</a>.    .<a href="https://github.com/NT3002">Git Hub</a></p>
+        <P class="link"><a href="https://www.hackerrank.com/nikhiltiwari1903" target="_blank">HackerRank</a>.    .<a href="https://www.linkedin.com/in/tiwari-2" target="_blank">Linkedin</a>.    .<a href="https://www.instagram.com/codeforyourself_/" target="_blank">Instagram</a>.    .<a href="https://github.com/NT3002" target="_blank">Git Hub</a></p>
           <hr/>
            <P class="temp"> Time Stops For No One But You Know That A Day Will Come<br> When Time Will Be Under You But<br> that's not how you are going on!</P>
           
